--- a/styles.css
+++ b/styles.css
@@ -75,7 +75,7 @@ padding-top: 0.1rem;
 }
 
 
-h4{
+h2{
 color: white;
         font-family: "MV Boli", Times, serif;
     word-spacing: 1rem;
@@ -122,8 +122,8 @@ margin-right: 2rem;
   z-index: 1;
 }
 .slider-nav a {
- width: 1rem;
- height: 1rem;
+ width: 2rem;
+ height: 2rem;
  border-radius: 30%;
  background-color: black;
  opacity: 0.15;
@@ -137,14 +137,39 @@ margin-right: 2rem;
  border-radius: 50%;
  background-color: darkblue;
  }}
+ @media (min-width:1000px){
+ .slider-nav a{
+    width: 4rem;
+ height: 4rem;
+ opacity: 0.1;
+ border-radius: 30%;
+ background-color: darkblue;
+ }}
+
+@media (min-width:1200px){
+ .slider-nav a{
+    width: 6rem;
+ height: 6rem;
+ opacity: 0.1;
+ border-radius: 30%;
+ background-color: darkblue;
+ }}
+
 .slider-nav a:hover {
   opacity: 0.9;
 }
 #footer{
-background-color: rgb(63, 63, 68);
+background-color: rgb(63, 68, 67);
 position: absolute;
 padding: 0;
 }
-a{
-color: rgb(173, 245, 173);
+@media (max-width:500px){#footer{
+font-size: 70%;
+}}
+@media (max-width:500px){
+h2{
+word-spacing: 0;
+}}
+u{
+color: cyan;
 }
