--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,5 @@
 
+
 * {
   scrollbar-width: auto;
     scrollbar-color: darkblue transparent;}
@@ -35,7 +36,12 @@ text-align: center;
 padding: 0;
 }
 
-
+.a{
+    display: inline-block;
+   text-align: center; 
+   margin: 60;
+   scale: 4;
+}
 
 #image
 { width: 50%;
